--- a/ML.ipynb
+++ b/ML.ipynb
@@ -8,6 +8,7 @@
       },
       "outputs": [],
       "source": [
+        "# Multinomial Naive Bayes, K-Neighbors, LSVC, DT, RF, SVC\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
